# es-git

./: .gitattributes  .gitignore  .yarnrc.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README-ko_kr.md  README.md  biome.json  index.d.ts  index.js  justfile  package.json  rustfmt.toml  taplo.toml  tsconfig.json  vitest.config.mts
.github/: CONTRIBUTING.md
.github/workflows/: CI.yml  ci.yml  release.yml
benchmarks/: README.md  index.bench.ts  package.json  util.ts
benchmarks/nodegit/: index.d.ts  index.js  package-lock.json  package.json
docs/: .gitignore  README.md  about.md  gen-reference.ts  gen-typedoc.js  getting-started.md  index.md  install.md  intro.md  package.json  performance.md  tsconfig.json  typedoc.config.js  usage.md
docs/.vitepress/: config.ts  en.ts  ko.ts  shared.ts
docs/ko/: about.md  getting-started.md  index.md  install.md  intro.md  performance.md  usage.md
docs/public/: site.webmanifest
docs/reference/: globals.md  typedoc-sidebar.json
docs/usage/: clone.md  commit.md  diff.md  history.md  open.md  remote.md  repository.md  tag.md
npm/darwin-arm64/: README.md  package.json
src/: blob.rs  branch.rs  commit.rs  config.rs  context.rs  diff.rs  error.rs  index.rs  lib.rs  object.rs  oid.rs  reference.rs  remote.rs  repository.rs  revparse.rs  revwalk.rs  signature.rs  tag.rs  tree.rs  util.rs
tests/: blob.spec.ts  branch.spec.js  branch.spec.ts  commit.spec.ts  config.spec.ts  diff.spec.ts  env.ts  fixtures.ts  index.spec.ts  object.spec.ts  oid.spec.ts  reference.spec.ts  remote.spec.ts  repository.spec.ts  revparse.spec.ts  revwalk.spec.ts  sha.spec.js  sha.spec.ts  signature.spec.ts  tag.spec.ts  test.js  tmp.ts  tree.spec.ts  types.ts
transforms/: dts.mjs
(+520 files in other folders)
