[package]
edition = "2021"
name    = "es-git"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitflags    = "2.1.0"
chrono      = "0.4"
git2        = { version = "0.20.0", features = ["vendored-libgit2", "vendored-openssl"] }
napi        = { version = "2.16.13", default-features = false, features = ["napi6", "chrono_date"] }
napi-derive = "2.16.12"
thiserror   = "2.0.3"

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
